# LoomPilot

./: .env.example  .gitignore  .woodpecker.yml  AGENTS.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.gitea/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md
infra/kanboard/: README.md
infra/kanboard/plugins/GcgTheme/: Plugin.php  README.md
infra/kanboard/plugins/GcgTheme/Assets/css/: gcg.css
infra/kanboard/plugins/GcgTheme/Template/: header.php
infra/kanboard/plugins/GcgTheme/Template/auth/: index.php
infra/kanboard/plugins/GcgTheme/Template/board/: table_column.php  table_tasks.php
infra/kanboard/plugins/GcgTheme/Template/header/: title.php
infra/kanboard/plugins/GcgTheme/Template/layout/: top.php
infra/kanboard/plugins/GcgTheme/Template/project_header/: header.php
infra/woodpecker/: README.md
scripts/: bootstrap_live_worktree.py  check_no_secrets.sh  run_executor_once.py  seed_kanboard.py
services/: __init__.py
services/common/: __init__.py  git_safety.py  kanboard.py  live_runtime.py  store.py  task_catalog.py
services/control_room/: __init__.py  app.py
services/control_room/templates/: index.html
services/orchestrator/: app.py  task_executor.py
services/pet_app/: __init__.py  app.py  domain.py
services/pet_app/templates/: base.html  dashboard.html  orders.html  products.html
tests/: test_aider_executor.py  test_control_room.py  test_git_safety.py  test_kanboard_sync.py  test_live_runtime.py  test_orchestrator.py  test_pet_app.py  test_store.py
